# financial-index-tracker

./: LICENSE.txt  README.md  pyproject.toml
InputFiles/: ~$data.xlsx
Source/: data_preparation.ipynb  data_preparation.py  engine_controller.py  index_controller.py  interface_utilisateur.ipynb  interface_utilisateur.py
Source/Indices/: index_controller.py
