[project]
name = "financial-index-tracker"
version = "0.1.0"
description = "A tool to create and track financial indices."
authors = [
    {name = "Guilhem Barroyer",email = "guilhem.barroyer@dauphine.eu"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
[tool.poetry.dependencies]

pandas = {version = "^2.2", extras = ["computation", "performance", "plot"]}
requests = "^2.32.3"
scikit-learn = "^1.5"
yfinance = { version = "*", optional = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

